Fix able to scroll page while modal open
Missing rootscrolllock.css. Also added rootscrollgutter (fixes chromium horizontal page shift when modal opened/closed due to scrollbar appearing/disappearing) and scrollbar (fixes chromium scrollbar not matching theme).

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,7 +2,8 @@
 @plugin './tailwind-min-size.js';
 @plugin "daisyui" {
     themes: light --default, dark --prefersdark;
-    include: modal, carousel, timeline, tooltip, divider, loading, rootcolor;
+    include: modal, carousel, timeline, tooltip, divider, loading,
+             rootcolor, rootscrolllock, rootscrollgutter, scrollbar;
 }
 
 /* Add custom theme colors (values overridden by daisyui themes below) */
